--- a/layouts/convenstions/index.html
+++ b/layouts/convenstions/index.html
@@ -35,12 +35,39 @@
                 </li>
             </ul>
         </section>
+
         <h1 class="title">best practices</h1>
+        <section>
+            <h2>Navigation Links</h2>
+        </section>
+        <section>
+            <h2>Lists</h2>
+        </section>
         <section>
             <h2>Containers</h2>
             <p>Wrapping sections with a container to give the page layout consistent look by
                 adding even/similar margin to all sections on the page. 
             </p>
+        </section>
+
+        <section>
+            <h2>Keep It Simple Stupid</h2>
+        </section>
+
+        <section>
+            <h2>fonts</h2>
+            <ul>
+                <li>Use less font families, max 2 or 3, for headers and body text.</li>
+                <li>But how to add variation and contrast to different text?</li>
+                <li>You cna play around with:
+                    <ol>
+                        <li>Colors: hue, saturation or lightness.</li>
+                        <li>Text style: weight, size or capitalization.</li>
+                        <li>Whitespace: letter spacing, line-height or margin.</li>
+
+                    </ol>
+                </li>
+            </ul>
         </section>
     </div>
 
