--- a/layouts/convenstions/index.html
+++ b/layouts/convenstions/index.html
@@ -39,20 +39,42 @@
         <h1 class="title">best practices</h1>
         <section>
             <h2>Navigation Links</h2>
+            <p>Always enclose any section that includes some means for navigation within the <code class="highlight">&lt;nav&gt;</code> tag.</p>
+
         </section>
         <section>
             <h2>Lists</h2>
+            <ul>
+                <li>
+                        <p>Navigation links, menus, contacts or any other list of items should alway be contained 
+                                within either:
+                                <ul>
+                                    <li>An unordered list <code class="highlight">&lt;ul&gt;</code>, or</li>
+                                    <li>An ordered list <code class="highlight">&lt;ol&gt;</code>.</li>
+                                </ul>
+                                
+                            </p>
+                </li>
+                <li>
+                    <p>Where each item in the list is wrapped within:
+                        <ul>
+                            <li>A list item <code class="highlight">&lt;li&gt;</code> tag.</li>
+                        </ul>
+                    </p>
+                </li>
+            </ul>
         </section>
         <section>
             <h2>Containers</h2>
-            <p>Wrapping sections with a container to give the page layout consistent look by
-                adding even/similar margin to all sections on the page. 
+            <p>
+                To give a webpage a unified look and better readability, it's recommended to wrap all the main sections of the page 
+                within containers that have even/similar margin to center the content of the page and give all sections
+                a consistent margin.
             </p>
+
         </section>
 
-        <section>
-            <h2>Keep It Simple Stupid</h2>
-        </section>
+
 
         <section>
             <h2>fonts</h2>
@@ -69,6 +91,14 @@
                 </li>
             </ul>
         </section>
+
+        <section>
+                <h2>Keep It Simple Stupid</h2>
+                <p>Always remember, less is more. <br>
+                    While exploring all CSS properties is important, 
+                    using the stylistic features of CSS in moderation is a key to  better web design.     
+                </p>
+            </section>
     </div>
 
 
