design system reviewed

--- a/design-system/components/index.html
+++ b/design-system/components/index.html
@@ -126,7 +126,7 @@
                 </section>
 
 
-                <h2 class="section-title">Bottons</h2>
+                <h2 class="section-title">Buttons</h2>
                 <section id="buttons">
                     <div class="btn filled">Filled</div>
                     <div class="btn outlined">Outlined</div>
