--- a/layouts/Flex/index.html
+++ b/layouts/Flex/index.html
@@ -20,8 +20,8 @@
         <section>
             <h2>When to Use Flexbox</h2>
             <ul>
-                <li>Flexbox is used when building layouts in one dimension (either colums and rows).</li>
-                <li>Small-scale layouts (row of cards, colomn of menu items in a sidebar).</li>
+                <li>Flexbox is used when building layouts in one dimension (either columns and rows).</li>
+                <li>Small-scale layouts (row of cards, column of menu items in a sidebar).</li>
             </ul>
             <h2>Why Flexbox? </h2>
             <ul>
@@ -61,7 +61,7 @@
                 <li><code>flex-wrap: nowrap | wrap | wrap-reverse;</code></li>
             </ul>
             <br>
-            <h3 class="title left">Sorthand :</h3>
+            <h3 class="title left">Shorthand :</h3>
             <ul>
                 <li><code>flex-flow: flex-direction flex-wrap;</code></li>
             </ul>
