--- a/layouts/grid/index.html
+++ b/layouts/grid/index.html
@@ -172,10 +172,10 @@
         <h1 class="title">Grid Items</h1>
         <section>
             <h2>grid-items Location</h2>
-            <p>By default, each <code class="highlight">grid-item</code> will be located inside on of the <code class="higlight">grid-cells</code>
+            <p>By default, each <code class="highlight">grid-item</code> will be located inside on of the <code class="highlight">grid-cells</code>
                 with respect to their order.</p>
             <p>However, this can be changed, by locating the <code class="highlight">grid-items</code> 
-                to a differnt <code class="highlight">grid-cell/s</code>
+                to a different <code class="highlight">grid-cell/s</code>
                  or to a pre-defined <code class="highlight">grid-area</code>.</p> 
             <p><code class="highlight"></code></p>
             <p><code class="highlight">grid-area</code> : area of one or multiple adjacent <code class="highlight">grid-cells</code> identified by a given label.</p>
