--- a/layouts/layout-tools/index.html
+++ b/layouts/layout-tools/index.html
@@ -48,7 +48,7 @@
         <section>
             <h2>Float</h2>
             <ul>
-                <li>Using <code class="highlight">float:rigth</code> and <code class="highlight">float:left</code> with <br> a hint of <code class="highlight">display: inline-block;</code>
+                <li>Using <code class="highlight">float:right</code> and <code class="highlight">float:left</code> with <br> a hint of <code class="highlight">display: inline-block;</code>
                 It is possible to build quite complicated web pages.</li>
                 <li>Here's an example:</li>
             </ul>
