--- a/layouts/semantic-tags/index.html
+++ b/layouts/semantic-tags/index.html
@@ -92,7 +92,7 @@
                 <br>
                 <li><code class="highlight">&lt;cite&gt;</code>: Citation reference. </li>
                 <br>
-                <li><code class="highlight">&lt;dfn&gt;</code>: Terminology explaination.</li>
+                <li><code class="highlight">&lt;dfn&gt;</code>: Terminology explanation.</li>
 
 
         </section>
